@@ -70,6 +70,18 @@
 # accepted. MQTT imposes a maximum payload size of 268435455 bytes. 
 #message_size_limit 0
 
+# This option controls whether a client is allowed to connect with a zero
+# length client id or not. This option only affects clients using MQTT v3.1.1
+# and later. If set to false, clients connecting with a zero length client id
+# are disconnected. If set to true, clients will be allocated a client id by
+# the broker. This means it is only useful for clients with clean session set
+# to true.
+#allow_zero_length_clientid true
+
+# If allow_zero_length_clientid is true, this option allows you to set a prefix
+# to automatically generated client ids to aid visibility in logs.
+#auto_id_prefix
+
 # This option allows persistent clients (those with clean session set to false)
 # to be removed if they do not reconnect within a certain time frame. This is a
 # non-standard option. As far as the MQTT spec is concerned, persistent clients
